--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
 
 
-    <main>
-        <div id="app" style="height: 150vh;">
-            
+    <main class="container-fluid">
+        <div class="row">
+            <aside id="pokemon-list" class="col-3"></aside>
+            <div id="active-pokemon" class="col-6"></div>
         </div>
     </main>
 
